[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "^0.7", features = [] }
cortex-m-rt = "^0.7"
rtt-target = { version = "^0.3", features = ["cortex-m"] }
#panic-halt = "0.2.0"
bare-metal = "1.0"
panic-probe = { version = "^0.2", features = ["print-rtt"] }

# Cargo.toml
[profile.dev]
incremental = false
codegen-units = 1
debug = 2 # default is `true`; not needed if not already overridden
lto = "off"

[profile.release]
codegen-units = 1
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target
lto= true